# psim

./: CMakeLists.txt  README.md  gravitational.frag.glsl  gravitational.vert.glsl  helpers.h  kernels.cl  main.cpp  particles.frag.glsl  particles.vert.glsl  shader.glsl  texture.frag.glsl  texture.vert.glsl
